# identity-provider

./: README.md
api_wasm/: Cargo.toml
api_wasm/src/: api_client.rs  lib.rs  mod.rs
api_wasm/src/shared/: interfaces.rs
auth-server/: Cargo.toml
auth-server/src/: main.rs
frontend/login_service/: angular.json  package-lock.json  package.json
frontend/login_service/src/: index.html  main.ts  styles.scss
frontend/login_service/src/app/: app.routes.ts  app.spec.ts
frontend/register_service/: README.md  angular.json  package-lock.json  package.json
frontend/register_service/src/app/: app.spec.ts  app.ts
idp-server/: Cargo.toml  makefile
idp-server/config/: database_configuration.json  discovery.json
idp-server/src/: database.rs  main.rs  mod.rs  structs.rs  utils.rs
idp-server/src/priv/browser/: index.html  main-KXEO6CMA.js  main-LKHJ3BQB.js  main-RUEE6LGL.js  styles-JRRMEGFQ.css
idp-server/src/priv/login_service/browser/: index.html  main-FZVBG4TD.js
idp-server/src/server/: handlers.rs
login_page/: angular.json  package-lock.json  package.json
login_page/src/: main.ts
login_page/src/app/: app.routes.ts  app.ts
login_page/src/app/login-component/: login-component.html  login-component.scss  login-component.ts
test-frontend/: README.md  package-lock.json  package.json
test-frontend/src/app/: app.ts
