[package]
name = "api_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.95", features = [
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "Headers",
    "console",
    "RequestCredentials",
] }
gloo-net = "0.7.0"
js-sys = "0.3.95"
sha3 = "0.11.0"
base64 = "0.22.1"