[package]
name = "idp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
axum_csrf = { version = "0.11.0", features = ["layer"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
uuid = { version = "1.23.1", features = ["v4"] }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
time = "0.3.47"
rand = "0.10.1"
tower = "0.5.3"
tower-sessions = "0.15.0"
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
] }
axum_session = "0.20.1"
axum_session_sqlx = { version = "0.9.0", features = ["postgres", "tls-rustls"] }
url = "2.5.8"
